# opcua

./: .gitignore  CMakeLists.txt
client/src/: client.rs  lib.rs  message_queue.rs  session.rs  session_retry.rs  session_state.rs  subscription.rs  subscription_timer.rs
client/src/comms/: tcp_transport.rs
console-logging/src/: lib.rs
core/src/: lib.rs
core/src/comms/: secure_channel.rs  tcp_codec.rs
core/src/crypto/: aeskey.rs  mod.rs  thumbprint.rs
docs/: client.md
samples/demo-server/src/: control.rs  machine.rs  main.rs  scalar.rs
samples/simple-client/: Cargo.toml
samples/simple-client/src/: main.rs
samples/simple-server/src/: main.rs
samples/web-client/html/: index.html
samples/web-client/src/: main.rs
server/src/address_space/: address_space.rs  data_type.rs  method.rs  object.rs  object_type.rs  reference_type.rs  variable.rs  variable_type.rs  view.rs
types/src/: argument.rs  encoding.rs  lib.rs  node_id.rs  node_ids.rs  numeric_range.rs  supported_message.rs
types/src/service_types/: create_session_request.rs  impls.rs
