cmake_minimum_required(VERSION 3.14)
project(opcua)

set(CMAKE_CXX_STANDARD 14)

include_directories(3rd-party/open62541/libopen62541)

add_executable(opcua
        3rd-party/node-opcua/client.js
        3rd-party/node-opcua/package-lock.json
        3rd-party/node-opcua/package.json
        3rd-party/node-opcua/server.js
        3rd-party/open62541/libopen62541/CMakelists.txt
        3rd-party/open62541/libopen62541/open62541.c
        3rd-party/open62541/libopen62541/open62541.h
        3rd-party/open62541/client.cpp
        3rd-party/open62541/CMakelists.txt
        3rd-party/open62541/README.md
        3rd-party/open62541/server.cpp
        3rd-party/3rd-party.iml
        client/src/comms/mod.rs
        client/src/comms/tcp_transport.rs
        client/src/comms/transport.rs
        client/src/tests/mod.rs
        client/src/builder.rs
        client/src/callbacks.rs
        client/src/client.rs
        client/src/config.rs
        client/src/lib.rs
        client/src/message_queue.rs
        client/src/session.rs
        client/src/session_retry.rs
        client/src/session_state.rs
        client/src/subscription.rs
        client/src/subscription_state.rs
        client/src/subscription_timer.rs
        client/Cargo.toml
        client/client.iml
        console-logging/src/lib.rs
        console-logging/Cargo.toml
        core/src/comms/chunker.rs
        core/src/comms/message_chunk.rs
        core/src/comms/message_chunk_info.rs
        core/src/comms/message_writer.rs
        core/src/comms/mod.rs
        core/src/comms/secure_channel.rs
        core/src/comms/security_header.rs
        core/src/comms/tcp_codec.rs
        core/src/crypto/aeskey.rs
        core/src/crypto/certificate_store.rs
        core/src/crypto/hash.rs
        core/src/crypto/mod.rs
        core/src/crypto/pkey.rs
        core/src/crypto/random.rs
        core/src/crypto/security_policy.rs
        core/src/crypto/thumbprint.rs
        core/src/crypto/user_identity.rs
        core/src/crypto/x509.rs
        core/src/tests/test_data/our_cert.der
        core/src/tests/test_data/our_private.pem
        core/src/tests/test_data/their_cert.der
        core/src/tests/test_data/their_private.pem
        core/src/tests/authentication.rs
        core/src/tests/chunk.rs
        core/src/tests/comms.rs
        core/src/tests/crypto.rs
        core/src/tests/mod.rs
        core/src/tests/secure_channel.rs
        core/src/tests/services.rs
        core/src/completion_pact.rs
        core/src/config.rs
        core/src/handle.rs
        core/src/lib.rs
        core/src/runtime.rs
        core/Cargo.toml
        core/core.iml
        docs/client.md
        docs/compatibility.md
        docs/cross-compile.md
        docs/docs.iml
        docs/opc_ua_overview.md
        docs/server.md
        docs/setup.md
        docs/testing.md
        integration/src/main.rs
        integration/src/tests.rs
        integration/Cargo.toml
        integration/README.md
        integration/run-sanity.sh
        integration/run.sh
        samples/chess-server/src/game.rs
        samples/chess-server/src/main.rs
        samples/chess-server/Cargo.toml
        samples/chess-server/chess-server.iml
        samples/chess-server/README.md
        samples/demo-server/src/control.rs
        samples/demo-server/src/machine.rs
        samples/demo-server/src/main.rs
        samples/demo-server/src/scalar.rs
        samples/demo-server/users/sample-x509.der
        samples/demo-server/Cargo.toml
        samples/demo-server/log4rs.yaml
        samples/demo-server/README.md
        samples/discovery-client/src/main.rs
        samples/discovery-client/Cargo.toml
        samples/discovery-client/README.md
        samples/modbus-server/src/main.rs
        samples/modbus-server/Cargo.toml
        samples/modbus-server/README.md
        samples/mqtt-client/src/main.rs
        samples/mqtt-client/Cargo.toml
        samples/mqtt-client/README.md
        samples/simple-client/identity/sample-x509.der
        samples/simple-client/identity/sample-x509.pem
        samples/simple-client/src/main.rs
        samples/simple-client/Cargo.toml
        samples/simple-client/README.md
        samples/simple-client/simple-client.iml
        samples/simple-server/src/main.rs
        samples/simple-server/users/sample-x509.der
        samples/simple-server/Cargo.toml
        samples/simple-server/README.md
        samples/simple-server/simple-server.iml
        samples/web-client/html/index.html
        samples/web-client/src/main.rs
        samples/web-client/Cargo.toml
        samples/web-client/README.md
        samples/client.conf
        samples/server.conf
        schemas/1.0.3/AttributeIds.csv
        schemas/1.0.3/NodeIds.csv
        schemas/1.0.3/Opc.Ua.Endpoints.wsdl
        schemas/1.0.3/Opc.Ua.NodeSet.xml
        schemas/1.0.3/Opc.Ua.NodeSet2.Part10.xml
        schemas/1.0.3/Opc.Ua.NodeSet2.Part11.xml
        schemas/1.0.3/Opc.Ua.NodeSet2.Part12.xml
        schemas/1.0.3/Opc.Ua.NodeSet2.Part13.xml
        schemas/1.0.3/Opc.Ua.NodeSet2.Part14.xml
        schemas/1.0.3/Opc.Ua.NodeSet2.Part3.xml
        schemas/1.0.3/Opc.Ua.NodeSet2.Part4.xml
        schemas/1.0.3/Opc.Ua.NodeSet2.Part5.xml
        schemas/1.0.3/Opc.Ua.NodeSet2.Part8.xml
        schemas/1.0.3/Opc.Ua.NodeSet2.Part9.xml
        schemas/1.0.3/Opc.Ua.NodeSet2.Part999.xml
        schemas/1.0.3/Opc.Ua.NodeSet2.xml
        schemas/1.0.3/Opc.Ua.PredefinedNodes.xml
        schemas/1.0.3/Opc.Ua.Services.wsdl
        schemas/1.0.3/Opc.Ua.StatusCodes.csv
        schemas/1.0.3/Opc.Ua.Types.bsd.xml
        schemas/1.0.3/Opc.Ua.Types.xsd
        schemas/1.0.3/OPCBinarySchema.xsd
        schemas/1.0.3/SecuredApplication.xsd
        schemas/1.0.3/ServerCapabilities.csv
        schemas/1.0.3/ServerCapabilityIdentifiers.csv
        schemas/1.0.3/StatusCodes.csv
        schemas/1.0.3/UANodeSet.xsd
        schemas/1.0.4/NodeIds.csv
        schemas/1.0.4/Opc.Ua.NodeSet2.Part10.xml
        schemas/1.0.4/Opc.Ua.NodeSet2.Part11.xml
        schemas/1.0.4/Opc.Ua.NodeSet2.Part12.xml
        schemas/1.0.4/Opc.Ua.NodeSet2.Part13.xml
        schemas/1.0.4/Opc.Ua.NodeSet2.Part14.xml
        schemas/1.0.4/Opc.Ua.NodeSet2.Part3.xml
        schemas/1.0.4/Opc.Ua.NodeSet2.Part4.xml
        schemas/1.0.4/Opc.Ua.NodeSet2.Part5.xml
        schemas/1.0.4/Opc.Ua.NodeSet2.Part8.xml
        schemas/1.0.4/Opc.Ua.NodeSet2.Part9.xml
        schemas/1.0.4/Opc.Ua.NodeSet2.Part999.xml
        schemas/1.0.4/Opc.Ua.NodeSet2.Services.xml
        schemas/1.0.4/Opc.Ua.NodeSet2.xml
        schemas/1.0.4/Opc.Ua.StatusCodes.cs
        schemas/1.0.4/Opc.Ua.Types.bsd
        schemas/1.0.4/Opc.Ua.Types.xsd
        server/benches/address_space.rs
        server/html/index.html
        server/src/address_space/generated/mod.rs
        server/src/address_space/generated/nodeset_10.rs
        server/src/address_space/generated/nodeset_11.rs
        server/src/address_space/generated/nodeset_12_1.rs
        server/src/address_space/generated/nodeset_12_2.rs
        server/src/address_space/generated/nodeset_13.rs
        server/src/address_space/generated/nodeset_14.rs
        server/src/address_space/generated/nodeset_3.rs
        server/src/address_space/generated/nodeset_4_1.rs
        server/src/address_space/generated/nodeset_4_2.rs
        server/src/address_space/generated/nodeset_5_1.rs
        server/src/address_space/generated/nodeset_5_10.rs
        server/src/address_space/generated/nodeset_5_11.rs
        server/src/address_space/generated/nodeset_5_2.rs
        server/src/address_space/generated/nodeset_5_3.rs
        server/src/address_space/generated/nodeset_5_4.rs
        server/src/address_space/generated/nodeset_5_5.rs
        server/src/address_space/generated/nodeset_5_6.rs
        server/src/address_space/generated/nodeset_5_7.rs
        server/src/address_space/generated/nodeset_5_8.rs
        server/src/address_space/generated/nodeset_5_9.rs
        server/src/address_space/generated/nodeset_8.rs
        server/src/address_space/generated/nodeset_999.rs
        server/src/address_space/generated/nodeset_9_1.rs
        server/src/address_space/generated/nodeset_9_2.rs
        server/src/address_space/address_space.rs
        server/src/address_space/base.rs
        server/src/address_space/data_type.rs
        server/src/address_space/method.rs
        server/src/address_space/method_impls.rs
        server/src/address_space/mod.rs
        server/src/address_space/node.rs
        server/src/address_space/object.rs
        server/src/address_space/object_type.rs
        server/src/address_space/reference_type.rs
        server/src/address_space/references.rs
        server/src/address_space/relative_path.rs
        server/src/address_space/variable.rs
        server/src/address_space/variable_type.rs
        server/src/address_space/view.rs
        server/src/comms/mod.rs
        server/src/comms/secure_channel_service.rs
        server/src/comms/tcp_transport.rs
        server/src/comms/transport.rs
        server/src/discovery/mod.rs
        server/src/events/event.rs
        server/src/events/event_filter.rs
        server/src/events/mod.rs
        server/src/events/operator.rs
        server/src/http/mod.rs
        server/src/services/attribute.rs
        server/src/services/discovery.rs
        server/src/services/message_handler.rs
        server/src/services/method.rs
        server/src/services/mod.rs
        server/src/services/monitored_item.rs
        server/src/services/node_management.rs
        server/src/services/session.rs
        server/src/services/subscription.rs
        server/src/services/view.rs
        server/src/subscriptions/mod.rs
        server/src/subscriptions/monitored_item.rs
        server/src/subscriptions/subscription.rs
        server/src/subscriptions/subscriptions.rs
        server/src/tests/services/attribute.rs
        server/src/tests/services/discovery.rs
        server/src/tests/services/method.rs
        server/src/tests/services/mod.rs
        server/src/tests/services/monitored_item.rs
        server/src/tests/services/node_management.rs
        server/src/tests/services/session.rs
        server/src/tests/services/subscription.rs
        server/src/tests/services/view.rs
        server/src/tests/subscriptions/mod.rs
        server/src/tests/subscriptions/subscription.rs
        server/src/tests/subscriptions/subscriptions.rs
        server/src/tests/address_space.rs
        server/src/tests/events.rs
        server/src/tests/mod.rs
        server/src/util/mod.rs
        server/src/builder.rs
        server/src/callbacks.rs
        server/src/config.rs
        server/src/continuation_point.rs
        server/src/diagnostics.rs
        server/src/lib.rs
        server/src/metrics.rs
        server/src/server.rs
        server/src/session.rs
        server/src/state.rs
        server/Cargo.toml
        server/server.iml
        tools/certificate-creator/src/main.rs
        tools/certificate-creator/Cargo.toml
        tools/certificate-creator/certificate-creator.iml
        tools/schema/gen_address_space.js
        tools/schema/gen_node_ids.js
        tools/schema/gen_nodeset.js
        tools/schema/gen_status_codes.js
        tools/schema/gen_supported_message.js
        tools/schema/gen_types.js
        tools/schema/nodeset.js
        tools/schema/package.json
        tools/schema/README.md
        tools/schema/settings.js
        tools/schema/util.js
        tools/tools.iml
        types/src/service_types/activate_session_request.rs
        types/src/service_types/activate_session_response.rs
        types/src/service_types/add_nodes_item.rs
        types/src/service_types/add_nodes_request.rs
        types/src/service_types/add_nodes_response.rs
        types/src/service_types/add_nodes_result.rs
        types/src/service_types/add_references_item.rs
        types/src/service_types/add_references_request.rs
        types/src/service_types/add_references_response.rs
        types/src/service_types/aggregate_configuration.rs
        types/src/service_types/aggregate_filter.rs
        types/src/service_types/aggregate_filter_result.rs
        types/src/service_types/annotation.rs
        types/src/service_types/anonymous_identity_token.rs
        types/src/service_types/application_description.rs
        types/src/service_types/argument.rs
        types/src/service_types/attribute_operand.rs
        types/src/service_types/browse_description.rs
        types/src/service_types/browse_next_request.rs
        types/src/service_types/browse_next_response.rs
        types/src/service_types/browse_path.rs
        types/src/service_types/browse_path_result.rs
        types/src/service_types/browse_path_target.rs
        types/src/service_types/browse_request.rs
        types/src/service_types/browse_response.rs
        types/src/service_types/browse_result.rs
        types/src/service_types/build_info.rs
        types/src/service_types/call_method_request.rs
        types/src/service_types/call_method_result.rs
        types/src/service_types/call_request.rs
        types/src/service_types/call_response.rs
        types/src/service_types/cancel_request.rs
        types/src/service_types/cancel_response.rs
        types/src/service_types/channel_security_token.rs
        types/src/service_types/close_secure_channel_request.rs
        types/src/service_types/close_secure_channel_response.rs
        types/src/service_types/close_session_request.rs
        types/src/service_types/close_session_response.rs
        types/src/service_types/complex_number_type.rs
        types/src/service_types/content_filter.rs
        types/src/service_types/content_filter_element.rs
        types/src/service_types/content_filter_element_result.rs
        types/src/service_types/content_filter_result.rs
        types/src/service_types/create_monitored_items_request.rs
        types/src/service_types/create_monitored_items_response.rs
        types/src/service_types/create_session_request.rs
        types/src/service_types/create_session_response.rs
        types/src/service_types/create_subscription_request.rs
        types/src/service_types/create_subscription_response.rs
        types/src/service_types/data_change_filter.rs
        types/src/service_types/data_change_notification.rs
        types/src/service_types/data_type_attributes.rs
        types/src/service_types/delete_at_time_details.rs
        types/src/service_types/delete_event_details.rs
        types/src/service_types/delete_monitored_items_request.rs
        types/src/service_types/delete_monitored_items_response.rs
        types/src/service_types/delete_nodes_item.rs
        types/src/service_types/delete_nodes_request.rs
        types/src/service_types/delete_nodes_response.rs
        types/src/service_types/delete_raw_modified_details.rs
        types/src/service_types/delete_references_item.rs
        types/src/service_types/delete_references_request.rs
        types/src/service_types/delete_references_response.rs
        types/src/service_types/delete_subscriptions_request.rs
        types/src/service_types/delete_subscriptions_response.rs
        types/src/service_types/discovery_configuration.rs
        types/src/service_types/double_complex_number_type.rs
        types/src/service_types/element_operand.rs
        types/src/service_types/endpoint_configuration.rs
        types/src/service_types/endpoint_description.rs
        types/src/service_types/endpoint_url_list_data_type.rs
        types/src/service_types/enum_value_type.rs
        types/src/service_types/enums.rs
        types/src/service_types/eu_information.rs
        types/src/service_types/event_field_list.rs
        types/src/service_types/event_filter.rs
        types/src/service_types/event_filter_result.rs
        types/src/service_types/event_notification_list.rs
        types/src/service_types/filter_operand.rs
        types/src/service_types/find_servers_on_network_request.rs
        types/src/service_types/find_servers_on_network_response.rs
        types/src/service_types/find_servers_request.rs
        types/src/service_types/find_servers_response.rs
        types/src/service_types/get_endpoints_request.rs
        types/src/service_types/get_endpoints_response.rs
        types/src/service_types/impls.rs
        types/src/service_types/issued_identity_token.rs
        types/src/service_types/literal_operand.rs
        types/src/service_types/mdns_discovery_configuration.rs
        types/src/service_types/method_attributes.rs
        types/src/service_types/mod.rs
        types/src/service_types/model_change_structure_data_type.rs
        types/src/service_types/modify_monitored_items_request.rs
        types/src/service_types/modify_monitored_items_response.rs
        types/src/service_types/modify_subscription_request.rs
        types/src/service_types/modify_subscription_response.rs
        types/src/service_types/monitored_item_create_request.rs
        types/src/service_types/monitored_item_create_result.rs
        types/src/service_types/monitored_item_modify_request.rs
        types/src/service_types/monitored_item_modify_result.rs
        types/src/service_types/monitored_item_notification.rs
        types/src/service_types/monitoring_filter.rs
        types/src/service_types/monitoring_filter_result.rs
        types/src/service_types/monitoring_parameters.rs
        types/src/service_types/network_group_data_type.rs
        types/src/service_types/node_attributes.rs
        types/src/service_types/node_reference.rs
        types/src/service_types/node_type_description.rs
        types/src/service_types/notification_data.rs
        types/src/service_types/notification_message.rs
        types/src/service_types/object_attributes.rs
        types/src/service_types/object_type_attributes.rs
        types/src/service_types/open_secure_channel_request.rs
        types/src/service_types/open_secure_channel_response.rs
        types/src/service_types/option_set.rs
        types/src/service_types/parsing_result.rs
        types/src/service_types/program_diagnostic_data_type.rs
        types/src/service_types/publish_request.rs
        types/src/service_types/publish_response.rs
        types/src/service_types/query_data_description.rs
        types/src/service_types/query_data_set.rs
        types/src/service_types/query_first_request.rs
        types/src/service_types/query_first_response.rs
        types/src/service_types/query_next_request.rs
        types/src/service_types/query_next_response.rs
        types/src/service_types/range.rs
        types/src/service_types/read_event_details.rs
        types/src/service_types/read_raw_modified_details.rs
        types/src/service_types/read_request.rs
        types/src/service_types/read_response.rs
        types/src/service_types/read_value_id.rs
        types/src/service_types/reference_description.rs
        types/src/service_types/reference_type_attributes.rs
        types/src/service_types/register_nodes_request.rs
        types/src/service_types/register_nodes_response.rs
        types/src/service_types/register_server_request.rs
        types/src/service_types/register_server_response.rs
        types/src/service_types/registered_server.rs
        types/src/service_types/relative_path.rs
        types/src/service_types/relative_path_element.rs
        types/src/service_types/republish_request.rs
        types/src/service_types/republish_response.rs
        types/src/service_types/sampling_interval_diagnostics_data_type.rs
        types/src/service_types/server_diagnostics_summary_data_type.rs
        types/src/service_types/server_on_network.rs
        types/src/service_types/service_counter_data_type.rs
        types/src/service_types/service_fault.rs
        types/src/service_types/session_diagnostics_data_type.rs
        types/src/service_types/session_security_diagnostics_data_type.rs
        types/src/service_types/set_monitoring_mode_request.rs
        types/src/service_types/set_monitoring_mode_response.rs
        types/src/service_types/set_publishing_mode_request.rs
        types/src/service_types/set_publishing_mode_response.rs
        types/src/service_types/set_triggering_request.rs
        types/src/service_types/set_triggering_response.rs
        types/src/service_types/signature_data.rs
        types/src/service_types/signed_software_certificate.rs
        types/src/service_types/simple_attribute_operand.rs
        types/src/service_types/status_change_notification.rs
        types/src/service_types/status_result.rs
        types/src/service_types/subscription_acknowledgement.rs
        types/src/service_types/subscription_diagnostics_data_type.rs
        types/src/service_types/time_zone_data_type.rs
        types/src/service_types/transfer_result.rs
        types/src/service_types/transfer_subscriptions_request.rs
        types/src/service_types/transfer_subscriptions_response.rs
        types/src/service_types/translate_browse_paths_to_node_ids_request.rs
        types/src/service_types/translate_browse_paths_to_node_ids_response.rs
        types/src/service_types/trust_list_data_type.rs
        types/src/service_types/unregister_nodes_request.rs
        types/src/service_types/unregister_nodes_response.rs
        types/src/service_types/user_identity_token.rs
        types/src/service_types/user_name_identity_token.rs
        types/src/service_types/user_token_policy.rs
        types/src/service_types/variable_attributes.rs
        types/src/service_types/variable_type_attributes.rs
        types/src/service_types/view_attributes.rs
        types/src/service_types/view_description.rs
        types/src/service_types/write_request.rs
        types/src/service_types/write_response.rs
        types/src/service_types/write_value.rs
        types/src/service_types/x_509_identity_token.rs
        types/src/service_types/xv_type.rs
        types/src/tests/date_time.rs
        types/src/tests/encoding.rs
        types/src/tests/hello.rs
        types/src/tests/mod.rs
        types/src/tests/node_id.rs
        types/src/tests/serialize.rs
        types/src/tests/supported_message.rs
        types/src/tests/variant.rs
        types/src/argument.rs
        types/src/attribute.rs
        types/src/basic_types.rs
        types/src/byte_string.rs
        types/src/data_types.rs
        types/src/data_value.rs
        types/src/date_time.rs
        types/src/diagnostic_info.rs
        types/src/encoding.rs
        types/src/extension_object.rs
        types/src/guid.rs
        types/src/lib.rs
        types/src/node_id.rs
        types/src/node_ids.rs
        types/src/notification_message.rs
        types/src/numeric_range.rs
        types/src/operand.rs
        types/src/relative_path.rs
        types/src/status_code.rs
        types/src/status_codes.rs
        types/src/string.rs
        types/src/supported_message.rs
        types/src/tcp_types.rs
        types/src/url.rs
        types/src/variant.rs
        types/Cargo.toml
        types/types.iml
        appveyor.yml
        Cargo.lock
        Cargo.toml
        CHANGELOG.md
        env.bat
        LICENSE.md
        opcua.iml
        README.md
        rustfmt.toml)
